@@ -1,4 +1,4 @@
-name:                env-parser
+name:                env-parser-talk
 version:             0.0.1.0
 synopsis:            A nice way of reading the ENV
 description:
@@ -42,6 +42,15 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-tabs
+
+test-suite spec
+  type:                exitcode-stdio-1.0
+  main-is:             Spec.hs
+  build-depends:       base >=4.6 && <4.7
+                     , env-parser-talk
+                     , hspec
+  hs-source-dirs:      tests
+  default-language:    Haskell2010
 
 source-repository head
   type: git
