@@ -1,0 +1,8 @@
+
+import           Test.Hspec
+
+main :: IO ()
+main = hspec $ do
+  describe "Nothing, nothing at all" $ do
+    it "exists" pending
+
